# Lockin-Ai

./: IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_OVERVIEW.txt  README.md  main.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: PROJECT_STRUCTURE.md  architecture.md
focusai/: __init__.py  config.py  logging_setup.py  models.py  vision_server.py
focusai/capture/: __init__.py  camera.py  cameraCapture.py  focus_tracker.py  tempMain.py
focusai/inference/: __init__.py  detector.py
focusai/preprocess/: __init__.py  features.py  processor.py
focusai/reaction/: __init__.py  reaction.py  tts.py  voice_manager.py
focusai/ui/: __init__.py  monitor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
tests/: test_capture.py  test_config.py  test_inference.py  test_models.py  test_preprocess.py  test_ui.py
