[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focusai"
version = "0.1.0"
description = "Real-time focus detection system using computer vision"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Lockin-AI Team"}
]
keywords = ["focus", "detection", "computer-vision", "attention", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

cv = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
]

ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnxruntime>=1.15.0",
]

ui = [
    "pygame>=2.5.0",
    "tkinter",
]

all = [
    "focusai[dev,cv,ml,ui]",
]

[project.scripts]
focusai = "main:main"

[project.urls]
Homepage = "https://github.com/Timber868/Lockin-Ai"
Repository = "https://github.com/Timber868/Lockin-Ai"
Issues = "https://github.com/Timber868/Lockin-Ai/issues"

[tool.setuptools]
packages = ["focusai", "focusai.capture", "focusai.preprocess", "focusai.inference", "focusai.ui"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=focusai --cov-report=html --cov-report=term-missing"
